--- a/Tevyat Expanding Cards/index.html
+++ b/Tevyat Expanding Cards/index.html
@@ -9,20 +9,29 @@
     </head>
     <body>
         <h1>Explore Tevyat</h1>
+        <p>You have arrived in Teyvat — a fantasy world where the seven elements flow and converge.
+            In the distant past, the Archons granted mortals unique elemental abilities. With the help of such powers, people formed a bountiful homeland out of the wilderness. However, 500 years ago, the collapse of an ancient civilization turned the universe upside down...
+            Though the calamity the world suffered has ceased, peace has yet to be restored.</p>
         <div class="container">
             <div class="panel active" style="background-image:url(../assets/img/mondstadt.jpg);">
+                <div class="icon"><img src="../assets/img/monstadt_icon.png"></div>
                 <h3>Mondstadt</h3>
             </div>
-            <div class="panel" style="background-image:url(../assets/img/liyue.jpg);">
-                <h3>Liyue</h3>
-            </div>
             <div class="panel" style="background-image:url(../assets/img/dragonspine.jpg);">
+                <div class="icon"><img src="../assets/img/monstadt_icon.png"></div>
                 <h3>Dragonspine</h3>
             </div>
             <div class="panel" style="background-image:url(../assets/img/tevyat.png);">
+                <div class="icon"><img src="../assets/img/monstadt_icon.png"></div>
                 <h3>Apple Archipelago</h3>
             </div>
+            <div class="panel" style="background-image:url(../assets/img/liyue.jpg);">
+                <div class="icon"><img src="../assets/img/liyue_icon.png"></div>
+                <h3>Liyue</h3>
+            </div>
+            
             <div class="panel" style="background-image:url(../assets/img/inazuma.jpg);">
+                <div class="icon"><img src="../assets/img/inazuma_icon.png"></div>
                 <h3>Inazuma</h3>
             </div>
 
